# decart-cpp

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
.github/workflows/: ci.yml  release.yml
cmake/: decart-config.cmake.in
examples/: CMakeLists.txt  create_token.cpp  realtime_synthetic.cpp  realtime_video.cpp  realtime_warmup.cpp
include/decart/: client.h  decart.h  errors.h  logging.h  models.h  tokens.h  version.h  version.h.in
include/decart/realtime/: realtime.h  session.h  types.h
scripts/: format.sh  release.sh
src/: client.cpp  errors.cpp  logging.cpp  models.cpp  tokens.cpp
src/detail/: base64.cpp  base64.h  client_config.h  http_client.cpp  http_client.h  livekit_runtime.h  log.h  signaling_channel.cpp  signaling_channel.h  url.h  user_agent.cpp  user_agent.h
src/realtime/: messages.cpp  messages.h  realtime.cpp  session.cpp  session_internal.h  types.cpp
tests/: CMakeLists.txt  test_base64.cpp  test_enums.cpp  test_main.cpp  test_messages.cpp  test_models.cpp
